# usagi

./: .gitignore  .pr-3b3-body.md  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  Taskfile.yml  build.rs  coverage-off-allowlist.json  lefthook.yml  lychee.toml  patch.diff  patch_clippy.diff  patch_tests.diff
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/cli/src/cli/: mod.rs  sandbox.rs
crates/cli/src/cli/commands/: agent_phase.rs  completion.rs  config.rs  doctor.rs  guard_workspace.rs  hop.rs  mod.rs  open.rs  update.rs  version.rs
crates/cli/src/cli/hooks/: agent_phase.rs  claude_sandbox.rs  codex_session_capture.rs  guard_workspace.rs  mod.rs
crates/cli/src/mcp/: mod.rs  protocol.rs  resources.rs  runtime_model.rs  serve.rs  tool.rs
crates/cli/src/mcp/guides/: orchestration.md
crates/cli/src/mcp/tools/: issue.rs  memory.rs  mod.rs  session.rs  supervisor.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  test_support.rs
crates/core/src/domain/: agent_tab_intent.rs  frontmatter.rs  id.rs  mod.rs  pr_inventory.rs  session_lifecycle.rs  supervisor.rs  terminal_launch.rs  terminal_visibility.rs  user_decision.rs  workspace.rs
crates/core/src/domain/agent/: mod.rs
crates/core/src/domain/daemon/: mod.rs  tests.rs
crates/core/src/domain/id/: mod.rs  tests.rs
crates/core/src/domain/issue/: markdown.rs  mod.rs  tests.rs
crates/core/src/domain/memory/: markdown.rs  mod.rs  tests.rs
crates/core/src/domain/note/: mod.rs  tests.rs
crates/core/src/domain/pullrequest/: mod.rs  tests.rs
crates/core/src/domain/recent/: mod.rs  tests.rs
crates/core/src/domain/session/: mod.rs  tests.rs
crates/core/src/domain/settings/: mod.rs  tests.rs
crates/core/src/domain/trace/: mod.rs  tests.rs
crates/core/src/domain/workspace/: mod.rs  tests.rs
crates/core/src/domain/workspace_state/: mod.rs  tests.rs
crates/core/src/infrastructure/: error_log.rs  gitignore.rs  issue_store.rs  markdown_store.rs  memory_store.rs  mod.rs  paths.rs  repo_paths.rs  runtime_model.rs  storage.rs  store_lock.rs
crates/core/src/infrastructure/daemon/: mod.rs  tests.rs
crates/core/src/infrastructure/git/: clone.rs  diff.rs  mod.rs  repo.rs  runner.rs  worktree.rs
crates/core/src/infrastructure/ipc/: mod.rs  tests.rs
crates/core/src/infrastructure/persistence/: json_file.rs  markdown_store.rs  mod.rs  store_lock.rs
crates/core/src/usecase/: agent.rs  claude_sandbox.rs  client.rs  environment.rs  issue.rs  memory.rs  mod.rs  note.rs  pr_inventory.rs  session.rs  settings.rs  vt_screen.rs  workspace.rs  workspace_guard.rs
crates/core/tests/: agent_contract.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: lib.rs  test_support.rs
crates/daemon/src/infrastructure/: mod.rs  pty.rs  unix_transport.rs
crates/daemon/src/presentation/: ipc.rs  mod.rs
crates/daemon/src/usecase/: agent_ipc.rs  claude.rs  control.rs  generation.rs  generic_terminal.rs  metrics.rs  mod.rs  orchestration.rs  pr_inventory.rs  restart.rs  runtime.rs  serve.rs  session_runtime.rs  start.rs  status.rs  stop.rs  supervisor_runtime.rs  terminal.rs  terminal_ipc.rs  terminal_profile.rs  terminal_visibility_ipc.rs
crates/daemon/tests/: agent_real_pty.rs
crates/tui/: Cargo.toml
crates/tui/src/: lib.rs
crates/tui/src/infrastructure/: daemon.rs  metrics.rs  mod.rs
crates/tui/src/presentation/: frame.rs  live_terminal.rs  metrics.rs  mod.rs  theme.rs  workspace_runtime.rs
crates/tui/src/usecase/: application.rs  mod.rs  session_remove.rs  terminal_input.rs
crates/tui/tests/: parity_suite.rs
crates/tui/tests/fixtures/: home_cjk.golden  home_git_diffs.golden  home_live_terminal.golden
v1/: Cargo.toml  README.md
v1/docs-draft/: plan-agent-mcp-select.md
v1/document/: 00-tutorial.md  02-architecture.md  04-orchestration.md  05-settings.md  06-conventions.md  README.md
v1/document/03-commands/: 01-cli.md  03-mcp.md
v1/document/data/: 01-global.md  02-workspace.md  03-issues.md  04-memory.md  05-orchestrators.md
v1/document/design/: 02-open.md  03-new.md  04-config.md
v1/document/design/home/: 01-modes.md  05-overlays.md
v1/document/proposals/: 01-root-orchestration.md  03-durable-issue-orchestrator.md  04-sccache-rust-builds.md  05-session-lifecycle.md  README.md
v1/src/: composition.rs  lib.rs  main.rs
v1/src/domain/: agent.rs  agent_feature.rs  agent_phase.rs  daemon.rs  mod.rs  orchestrator.rs  wake.rs  workspace_state.rs
v1/src/domain/issue/: markdown.rs
v1/src/infrastructure/: agent_live_pane_store.rs  agent_live_prompt_store.rs  agent_prompt_store.rs  agent_start_store.rs  agent_state_store.rs  daemon_client.rs  daemon_terminals_store.rs  gitignore.rs  history_store.rs  issue_number_sequence.rs  issue_store.rs  json_file.rs  markdown_file.rs  markdown_store.rs  memory_store.rs  mod.rs  open_panes_store.rs  orchestrator_event.rs  orchestrator_store.rs  pr_link_store.rs  process.rs  pty.rs  pty_exit.rs  release.rs  repo_paths.rs  session_inventory.rs  session_monitor.rs  setup_runner.rs  storage.rs  store_lock.rs  terminal.rs  trace_log.rs  unite_store.rs  workspace_store.rs  worktree_keyed_store.rs
v1/src/infrastructure/agent/: antigravity.rs  claude.rs  gemini.rs  mod.rs
v1/src/infrastructure/env_resolver/: mod.rs  op_cli.rs
v1/src/infrastructure/git/: branch.rs  mod.rs  repo.rs  tests.rs  worktree.rs
v1/src/presentation/: mod.rs  theme.rs
v1/src/presentation/cli/: claude_sandbox.rs  clean.rs  completion.rs  config.rs  doctor.rs  guard_workspace.rs  icon.rs  llm_mcp.rs  mcp.rs  mod.rs  run.rs  status.rs  update.rs
v1/src/presentation/mcp/: child_io.rs  memory.rs  mod.rs  session.rs  usagi.rs
v1/src/usecase/: agent.rs  mod.rs  orchestrator.rs  project.rs  search.rs  self_update.rs  settings.rs  update.rs  workspace.rs  workspace_guard.rs  workspace_state.rs
v1/src/usecase/doctor/: mod.rs
v1/src/usecase/issue/: mod.rs  tests.rs  tree.rs  view.rs
v1/src/usecase/memory/: mod.rs  tests.rs  view.rs
v1/src/usecase/session/: mod.rs  reconcile.rs  tree.rs
v1/tests/: architecture_dependencies.rs  daemon_ipc_test.rs  integration_test.rs
(+1243 files in other folders)
