# usagi v2（フルリライト）のパッケージ。旧実装（v1）は v1/ に退避してあり、
# 独立した Cargo プロジェクトとして残っている（このパッケージのビルド対象外）。
#
# version は auto-release（.github/workflows/auto-release.yml）がルート Cargo.toml の
# version 変更をリリース起点として監視しているため、退避時点の v1 の version を
# そのまま引き継ぐ。v2 として最初にリリースするときに初めて bump する。
[package]
name = "usagi"
version = "2.6.0"
edition = "2024"
repository = "https://github.com/KKyosuke/usagi"
license = "MIT"
description = "usagi v2 — セッション・worktree オーケストレータのフルリライト"

# v2 はゼロからのリライトのため、依存は必要になった時点で追加する
# （v1 の依存を先回りで持ち込まない）。
[dependencies]

[dev-dependencies]

# clippy は CI / pre-push で `-D warnings` になるため、
# 日常のビルドから pedantic まで warning として表面化させておく。
[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# リリースバイナリの設定は v1 と同方針（クロス crate の inline 最適化とサイズ優先、
# strip あり）。panic は既定の unwind のまま。
[profile.release]
lto = true
codegen-units = 1
strip = true
