# usagi v2（フルリライト）の workspace。旧実装（v1）は v1/ に退避してあり、
# 独立した Cargo プロジェクトとして残っている（この workspace のビルド対象外）。
#
# ルートパッケージは配布バイナリ `usagi` の合成ルート（bin）で、実装は crates/ 配下の
# 4 クレートに置く（共通: usagi-core / daemon 面: usagi-daemon / TUI 面: usagi-tui /
# 入口面: usagi-cli）。構成の正本は document/02-architecture.md を参照。
#
# リリース起点は v1/Cargo.toml の version（auto-release が監視。リリースはまだ
# v1 のバイナリを出荷する）。このルートの version はリリースに影響しないが、
# 退避時点の v1 の version を引き継いだリテラルを置いておき（workspace 継承に
# しない。auto-release は `version = "..."` 行を grep するため）、v2 として最初に
# リリースするときにリリース起点をこちらへ切り替える。
[package]
name = "usagi"
version = "2.6.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "usagi v2 — セッション・worktree オーケストレータのフルリライト"

[dependencies]
usagi-cli.workspace = true
usagi-core.workspace = true
usagi-daemon.workspace = true
usagi-tui.workspace = true

[dev-dependencies]

[lints]
workspace = true

[workspace]
members = ["crates/cli", "crates/core", "crates/daemon", "crates/tui"]
# v1/ は退避された旧実装（独立した Cargo プロジェクト）。workspace に含めない。
exclude = ["v1"]

[workspace.package]
edition = "2024"
repository = "https://github.com/KKyosuke/usagi"
license = "MIT"

# 内部クレートの参照と外部依存の version は workspace.dependencies で一元管理する。
# v2 はゼロからのリライトのため、外部依存は必要になった時点で追加する
# （v1 の依存を先回りで持ち込まない）。
[workspace.dependencies]
usagi-cli = { path = "crates/cli" }
usagi-core = { path = "crates/core" }
usagi-daemon = { path = "crates/daemon" }
usagi-tui = { path = "crates/tui" }
# domain エンティティ（Workspace / Issue / Memory）が使う基盤語彙。時刻は chrono、
# JSON インデックス表現の (de)serialize は serde の derive で表す。serde_json は
# その JSON 表現を検証するテストでのみ使う（dev-dependency）。
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 端末描画で表示桁数（CJK など全角を 2 桁と数える）を正しく測るため。
unicode-width = "0.2"

# CLI の引数解析。入口面クレート（usagi-cli）がコマンドツリーの定義に使う。
# `string`: 配布 version など実行時に決まる文字列を clap コマンドに載せるため。
clap = { version = "4.5", features = ["derive", "string"] }

# clippy は CI / pre-push で `-D warnings` になるため、
# 日常のビルドから pedantic まで warning として表面化させておく。
# 各クレートは `[lints] workspace = true` でこれを継承する。
[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# リリースバイナリの設定は v1 と同方針（クロス crate の inline 最適化とサイズ優先、
# strip あり）。panic は既定の unwind のまま。
[profile.release]
lto = true
codegen-units = 1
strip = true
