# usagi v2（フルリライト）の workspace。旧実装（v1）は v1/ に退避してあり、
# 独立した Cargo プロジェクトとして残っている（この workspace のビルド対象外）。
#
# ルートパッケージは配布バイナリ `usagi` の合成ルート（bin）で、実装は crates/ 配下の
# 4 クレートに置く（共通: usagi-core / daemon 面: usagi-daemon / TUI 面: usagi-tui /
# 入口面: usagi-cli）。構成の正本は document/02-architecture.md を参照。
#
# リリース起点は v1/Cargo.toml の version（auto-release が監視。リリースはまだ
# v1 のバイナリを出荷する）。このルートの version はリリースに影響しないが、
# 退避時点の v1 の version を引き継いだリテラルを置いておき（workspace 継承に
# しない。auto-release は `version = "..."` 行を grep するため）、v2 として最初に
# リリースするときにリリース起点をこちらへ切り替える。
[package]
name = "usagi"
version = "2.6.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "usagi v2 — セッション・worktree オーケストレータのフルリライト"

[dependencies]
usagi-cli.workspace = true
usagi-core.workspace = true
usagi-daemon.workspace = true
usagi-tui.workspace = true
# 合成ルートだけが実端末 IO を持つ。crossterm で raw mode・代替スクリーン・キー入力を
# 束ね、welcome 画面の対話ループ（usagi-tui の純粋な制御ループ）へ注入する。chrono は
# recent カードの相対時刻に渡す現在時刻（実時計）をここで読むために使う。
crossterm.workspace = true
chrono.workspace = true
# daemon の pid 生存判定（signal 0）を合成ルートで束ねるため。
libc.workspace = true
# daemon の shutdown handler を worker spawn より前に登録し、同期 wait するため。
signal-hook.workspace = true
# daemon の単一インスタンスロック（flock）を合成ルートで束ねるため。
fs2.workspace = true
# core の GitRunner seam（`fn run(..) -> anyhow::Result<..>`）を合成ルートで実装するため。
anyhow.workspace = true
serde_json.workspace = true
serde.workspace = true
# macOS LaunchAgent の install path を user home から解決するため。
dirs.workspace = true

[dev-dependencies]
tempfile.workspace = true

[build-dependencies]
sha2.workspace = true

[lints]
workspace = true

[workspace]
members = ["crates/cli", "crates/core", "crates/daemon", "crates/tui"]
# v1/ は退避された旧実装（独立した Cargo プロジェクト）。workspace に含めない。
exclude = ["v1"]

[workspace.package]
edition = "2024"
repository = "https://github.com/KKyosuke/usagi"
license = "MIT"

# 内部クレートの参照と外部依存の version は workspace.dependencies で一元管理する。
# v2 はゼロからのリライトのため、外部依存は必要になった時点で追加する
# （v1 の依存を先回りで持ち込まない）。
[workspace.dependencies]
usagi-cli = { path = "crates/cli" }
usagi-core = { path = "crates/core" }
usagi-daemon = { path = "crates/daemon" }
usagi-tui = { path = "crates/tui" }
# domain エンティティ（Workspace / Issue / Memory）が使う基盤語彙。時刻は chrono、
# JSON インデックス表現の (de)serialize は serde の derive で表す。
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
# v2 resource identity. UUIDv4 is used for resource incarnations and UUIDv7 for
# producer-issued durable operations.
uuid = { version = "1.20", features = ["v4", "v7"] }
# infrastructure（永続化）で使う。serde_json は index.json / workspaces.json の
# (de)serialize、anyhow はストアのエラー伝播、fs2 はストアの cross-process ロック、
# dirs は既定データディレクトリ（~/.usagi）の解決、rayon は markdown の並列スキャン、
# sha2 は markdown source identity の決定的 fingerprint。
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
fs2 = "0.4"
dirs = "6.0"
rayon = "1.12.0"
sha2 = "0.10"
# テスト専用（一時ディレクトリ）。
tempfile = "3"

# 端末描画で表示桁数（CJK など全角を 2 桁と数える）を正しく測るため。
unicode-width = "0.2"

# 対話 TUI の実端末バックエンド。raw mode・代替スクリーン・キー/リサイズイベントの
# 読み取りを担う。TUI 面（usagi-tui）はこれに依存させず、実装は合成ルート（ルートの
# src/main.rs）だけが持つ（TUI 面は core の Terminal ポートに対して純粋に振る舞う）。
crossterm = "0.29"

# CLI の引数解析。入口面クレート（usagi-cli）がコマンドツリーの定義に使う。
# `string`: 配布 version など実行時に決まる文字列を clap コマンドに載せるため。
clap = { version = "4.5", features = ["derive", "string"] }
# `usagi completion <shell>` がシェル補完スクリプトを clap のコマンドツリーから生成する。
clap_complete = "4.5"
# root 行の workspace guard が Bash ツール呼び出しの shell command を字句解析し、
# mutating な git サブコマンドを read-only allowlist と照合するため（usagi-core の
# workspace_guard usecase が使う）。
shell-words = "1.1"

# 合成ルートが daemon の pid 生存判定（Unix の signal 0）に使う。
libc = "0.2"
# 合成ルートが daemon の SIGINT / SIGTERM を worker spawn 前から捕捉する。
signal-hook = "0.3"
# daemon-owned terminal runtime.  The daemon opens the pseudo-terminal; TUI
# clients only attach through IPC and never acquire a local PTY.
portable-pty = "0.9"

# clippy は CI / pre-push で `-D warnings` になるため、
# 日常のビルドから pedantic まで warning として表面化させておく。
# 各クレートは `[lints] workspace = true` でこれを継承する。
[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# リリースバイナリの設定は v1 と同方針（クロス crate の inline 最適化とサイズ優先、
# strip あり）。panic は既定の unwind のまま。
[profile.release]
lto = true
codegen-units = 1
strip = true
