# usagi v2 の入口面クレート（常駐しない headless presentation）。人間向け CLI
# サブコマンド（cli/）とエージェント向け MCP サーバ（mcp/）を置く
# （document/proposals/01-entry-surfaces.md）。usagi-core にのみ依存し、
# usagi-tui / usagi-daemon には依存しない。
[package]
name = "usagi-cli"
edition.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
usagi-core.workspace = true
clap.workspace = true
# `usagi completion <shell>` の補完スクリプト生成に使う。
clap_complete.workspace = true
# MCP サーバの stdio JSON-RPC 2.0 のパース・整形と、tool の入力スキーマ埋め込みに使う。
serde_json.workspace = true

[dev-dependencies]
# update のテストで GitRunner のフェイクを書くため（seam の戻り値が anyhow::Result）。
anyhow.workspace = true

[lints]
workspace = true
