# usagi v2 の共通クレート（common）。TUI 面・daemon 面の両方が共有する
# domain / usecase / 共有 infrastructure（IPC プロトコル型・永続化）を置く。
# 他の usagi クレートに依存しない（依存方向の詳細はルート Cargo.toml 参照）。
#
# version は持たない（配布 version はルートパッケージが持つ。内部クレートは
# publish しないため不要）。
[package]
name = "usagi-core"
edition.workspace = true
repository.workspace = true
license.workspace = true
publish = false

# domain の Workspace / Issue / Memory は時刻に chrono、JSON 表現の (de)serialize に
# serde を使う。infrastructure（永続化）は serde_json / anyhow / fs2 / dirs / rayon / sha2 を
# 使う。version はルート Cargo.toml で一元管理する。
[dependencies]
chrono.workspace = true
serde.workspace = true
uuid.workspace = true
serde_json.workspace = true
anyhow.workspace = true
fs2.workspace = true
dirs.workspace = true
rayon.workspace = true
sha2.workspace = true
toml.workspace = true
# workspace_guard usecase が root 行の Bash command を字句解析するため。
shell-words.workspace = true
# vt_screen usecase が端末セルの表示桁数（CJK など全角を 2 桁）を測るため。
# usecase 層のみで使い、domain（chrono/serde/uuid）へは持ち込まない。
unicode-width.workspace = true

# tempfile はストアのユニットテストで一時ディレクトリを作るためだけに使う。
[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
