# usagi v2 の daemon 面クレート。常駐プロセス（`usagi daemon`）のサーバ側
# （agent / シェルの PTY 所有・セッション監視・委譲 queue の消化。
# document/proposals/02-daemon.md）を置く。usagi-core にのみ依存し、
# usagi-tui には依存しない。
[package]
name = "usagi-daemon"
edition.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
usagi-core.workspace = true
# IPC リクエスト/レスポンス（usagi-core のプロトコル型）を wire の JSON へ (de)serialize する。
serde_json.workspace = true
serde.workspace = true
# Unix peer credentials and socket ownership checks are transport concerns of
# the daemon boundary, never part of the protocol core.
libc.workspace = true
portable-pty.workspace = true
chrono.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
